--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@
 				);
 				console.log("State of the stack after execution:", result.stackState);
 				console.log(result);
-				const stackDivHtml = `<p>State of the stack after execution: ${result.stackState}</p>`;
-				const asciiDivHtml = `<p>State of the stack after execution: ${result.readableStackState}</p>`;
+				const stackDivHtml = `<p>Actual Hex state of the stack after execution: ${result.stackState}</p>`;
+				const asciiDivHtml = `<p>Readable state of the stack after execution: ${result.readableStackState}</p>`;
 				const altstackDivHtml = `<p>State of the altstack after execution: ${result.altstackState}</p>`;
 				// const errstrDivHtml = `<p>Error string: ${result.errstr}</p>`;
 				// const flagsDivHtml = `<p>Flags: ${result.flags}</p>`;
